--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "keywords": [],
-  "author": "Karlo Delalic <karlo.delalic1@gmail.com> (https://karlodelalic.com/)",
+  "author": "Karlo Delalic <karlo.delalic1@gmail.com> (https://karlodelalic.me/)",
   "license": "ISC",
   "dependencies": {
-    "react": "16.8.6"
+    "react": "^16.10.2"
   }
 }
